# crypota

./: CMakeLists.txt  README.md  a.out  async_client.cpp  main.cpp  new.cpp  packets.hpp  test1.cpp  test2.cpp  zzzz.txt
crypto/: CMakeLists.txt
crypto/inc/: aes.hpp  mpz_string.hpp  primes_and_pow.hpp  random.hpp  rsa.hpp  serializers.hpp  sha256.hpp  signature.hpp
crypto/src/: aes.cpp  mpz_string.cpp  primes_and_pow.cpp  random.cpp  rsa.cpp  serializers.cpp  sha256.cpp  signature.cpp
filesys/: CMakeLists.txt
filesys/inc/: storage.hpp  utils.hpp
filesys/src/: storage.cpp  utils.cpp
interface/: main.cpp
interface/src/: index.html  script.js  styles.css
network/: CMakeLists.txt
network/inc/: client.hpp  server_info.hpp
network/src/: client.cpp  server.cpp  server_info.cpp
test/: a.out  new.cpp
test/client2/: client
test/server/: server
